--- a/style/website.css
+++ b/style/website.css
@@ -1,3 +1,4 @@
+/* OVERRIDES */
 .markdown-section{
   font-size: 1.7rem;
   line-height: 1.5;
@@ -6,6 +7,8 @@
 .markdown-section blockquote{
   color: auto;
 }
+
+/* VIDEO */
 
 .video-wrapper {
   position: relative;
@@ -20,6 +23,8 @@
   width: 100%;
   height: 100%;
 }
+
+/* IMAGES */
 
 .img-left{
   float: left;
@@ -38,4 +43,31 @@
 .img-300px{ width: 300px; }
 .img-50pc{ width: 50%; }
 
+hr{clear: both;}
 
+.mobile-visible{
+  display: none;
+}
+.mobile-hidden{
+  display: inherit;
+}
+
+/*
+  These rules only apply to screens less than 600px wide.
+  They override rules placed earlier in this file.
+*/
+@media only screen and (max-width: 600px) {
+  .img-50pc, .img-250px, .img-300px, .img-500px{
+    width: 100%;
+  }
+  .img-left, .img-right{
+    clear: both;
+    float: none;
+  }
+  .mobile-visible{
+    display: inherit;
+  }
+  .mobile-hidden{
+    display: none;
+  }
+}
